// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableListItem is rendered 1`] = `
<li
  aria-checked="false"
  aria-label="aria-label"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props append 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
    <span
      class="euiSelectableListItem__append"
    >
      <span />
       
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions mixed 1`] = `
<li
  aria-checked="mixed"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="minus"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Mixed (indeterminate) option.
         
        To check this option for all, press Enter once.
         
        To exclude this option for all, press Enter twice.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions off 1`] = `
<li
  aria-checked="true"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="cross"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Excluded option.
         
        To uncheck this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions on 1`] = `
<li
  aria-checked="true"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="check"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
         
        To exclude this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions undefined 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        To check this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & searchable on 1`] = `
<li
  aria-checked="true"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="check"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
         
        To uncheck this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & searchable undefined 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        To check this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked mixed 1`] = `
<li
  aria-checked="mixed"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="minus"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Mixed (indeterminate) option.
         
        To check this option for all, press Enter once.
         
        To uncheck this option for all, press Enter twice.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked on 1`] = `
<li
  aria-checked="true"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      color="text"
      data-euiicon-type="check"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked undefined 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props disabled 1`] = `
<li
  aria-checked="false"
  aria-disabled="true"
  aria-selected="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props isFocused 1`] = `
<li
  aria-checked="false"
  aria-selected="true"
  class="euiSelectableListItem euiSelectableListItem-isFocused euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
    <span
      class="euiSelectableListItem__append"
    >
       
      <span
        aria-hidden="true"
        class="euiBadge euiSelectableListItem__onFocusBadge emotion-euiBadge-hollow"
      >
        <span
          class="euiBadge__content emotion-euiBadge__content"
        >
          <span
            class="euiBadge__icon emotion-euiBadge__icon-left"
            color="inherit"
            data-euiicon-type="returnKey"
          />
        </span>
      </span>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be custom 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be true 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props paddingSize none is rendered 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props paddingSize s is rendered 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props prepend 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__prepend"
    >
      <span />
    </span>
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props showIcons can be turned off 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props textWrap can be "wrap" 1`] = `
<li
  aria-checked="false"
  class="euiSelectableListItem euiSelectableListItem--paddingSmall"
  role="option"
>
  <span
    class="euiSelectableListItem__content"
  >
    <span
      class="euiSelectableListItem__icon"
      data-euiicon-type="empty"
    />
    <span
      class="euiSelectableListItem__text euiSelectableListItem__text--wrap"
    />
  </span>
</li>
`;
